
        --- 8.3.6-REL released --- (Sun Jun  8 15:11:32 PDT 2003)

1547.	[port]		cope with spurious EINVAL from evRead.

1538.	[port]		linux: not all distributions define IF_NAMESIZE.

1502.	[port]		some IPv6 references were not protected.

        --- 8.3.5-REL released --- (Mon Jun  2 03:15:53 PDT 2003)

1540.	[bug]		remove potential memory leak from net_data_create().

1537.	[bug]		dig buffer overrun with large command lines.

1535.	[bug]		winnt: large zone transfers failed.

1536.	[cleanup]	use NS_MAXMSG to define TCP buffers.

1534.	[func]		The advertised EDNS UDP buffer size can now be set
			via named.conf (edns-udp-size).

1533.	[bug]		don't artificially restrict the update message size.

1532.	[bug]		use maximum sized answer buffers in res_findzonecut().

1530.	[bug]		nslookup computed incorrect reverse lookup for IPv6.

1529.	[lint]		unused variable in dnsquery.c::main().

1528.	[bug]		getaddrinfo() incorrectly rejected a numeric service
			under certian circumstances.

1527.	[proto]		add ns_t_apl (42).

1526.	[doc]		res_{get,set}servers().

1523.	[bug]		getipnodebyname with AI_ADDRCONFIG set was broken
			on HPUX 11.11.  Detect IPv6 interfaces under linux.

1519.	[port]		decunix: conflicting setnetgrent() and innetgr()
			prototypes.

1518.	[cleanup]	silence "No root nameservers for class XX" when
			"forward only;" is set in options.

1517.	[cleanup]	stop using putshort/putlong internally.

1513.	[bug]		use ipnodes.{byname,byaddr} for IPv6 NIS lookups.
			Add support for "YP_MULTI_".

1511.	[cleanup]	don't use argument names in function prototypes.

1510.	[port]		openbsd uses /bsd not /kernel.

1506.	[bug]		named could sometimes set tc incorrectly.

1505.	[bug]		potential overflow if pointer arithmetic wrapped.

1503.	[bug]		named could make unnecessary queries for glue if the
			additional section was full.

1501.	[port]		decunix: OSF 3.2 does not have native 64 bit support.

1500.	[port]		linux: namespace collision.
